Product page alignment fixes

--- a/src/styles/Frogs.module.css
+++ b/src/styles/Frogs.module.css
@@ -22,8 +22,8 @@
   width: 150px;
   /* transition: all .5s; */
   position: absolute;
-  top: -40px;
-  right: -130px;
+  top: -15px;
+  right: -140px;
   opacity: 0;
   transition: all 0.5s ease-in-out;
 }
