--- a/src/styles/HeroScroller.module.css
+++ b/src/styles/HeroScroller.module.css
@@ -31,7 +31,7 @@
   /* Cartoon bubble look */
   background: #fff;
   border: 6px solid #f9fd5d;
-  border-radius: 70px;
+  border-radius: 55px;
   /* box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); */
   z-index: 2;
 }
@@ -82,22 +82,22 @@
 .productList {
   width: 95%;
   padding-top: 25px;
-  padding-bottom: 4px;
+  padding-bottom: 7px;
   background-color: #4e483c;
   margin: auto;
-  border-radius: 60px;
+  border-radius: 45px;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
 .speechArrow {
-  position: absolute;
   background-size: cover;
-  width: 65px;
+  width: 101px;
   height: 50px;
-  top: 89%;
-  left: 94%;
+  position: absolute;
+  top: 86%;
+  left: 92%;
 }
 
 .speechArrowColor {
@@ -123,10 +123,10 @@
   position: relative;
   height: 100px;
   width: 100%;
-  margin-bottom: 12px;
+  margin-bottom: 3px;
 
   h2 {
-    color: #f8f3ce;
+    color: #4e483c;
     text-align: center;
     position: absolute;
     margin: 0;
@@ -134,7 +134,7 @@
     font-weight: normal;
     top: -10px;
     width: 100%;
-    font-size: 83px;
+    font-size: 75px;
   }
 }
 
